--- a/riesgo_ec/templates/verification_email.html
+++ b/riesgo_ec/templates/verification_email.html
@@ -12,6 +12,6 @@
     <h1 style="color: #007bff; font-size: 32px">{{ verification_code }}</h1>
 
     <p>Este código es válido por 10 minutos.</p>
-    <p>Si no solicitaste esto, puedes ignorar este mensaje.</p>
+    <p>Si no solicitaste esto. revisa tu cuenta</p>
   </body>
 </html>
